Fixed overflow bug in mobile

--- a/src/dashboardLayout/reminderSection.css
+++ b/src/dashboardLayout/reminderSection.css
@@ -1,8 +1,8 @@
 .reminderSectionContainer{
     width:fit-content;
     margin-top:20px;
-    height:230;
-    background-color: #fff;
+    height:230px;
+    background-color:#fff;
     padding:20px;
     border:1px solid #c1c1c1;
     border-radius:10px;
@@ -15,6 +15,7 @@
 .reminderSectionHeader{
     display:flex;
     justify-content:space-between;
+    
     
 }
 
@@ -160,3 +161,8 @@
     }
 }
 
+@media (max-width:768px){
+    .reminderSectionContainer{
+    height:auto !important;
+}
+}
