--- a/src/dashboardLayout/taskSection.css
+++ b/src/dashboardLayout/taskSection.css
@@ -170,7 +170,11 @@
     }
 }
 
-
+@media(max-width:768px){
+    .task-section-container{
+    height:auto;
+}
+}
 
 
 
